--- a/index.html
+++ b/index.html
@@ -18,10 +18,29 @@
 </head>
 
 <body>
-
-
-
-
+  <div class="wrapper">
+    <div class="jumbotron-fluid">
+      <div class="container">
+      <h1 class="">Rock+Paper+Scissors</h1>
+      <p>
+        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">Instructions</button>
+      </p>
+      <div class="collapse" id="collapseExample">
+        <div class="card card-body">
+          <p>When connected with another player, wait for prompt to play your turn. On your turn, tap R, P or S to play Rock, Paper or Scissors respectivly</p>
+          <img id="instructions" src="assets/images/instructions.jpg" alt="instructions">
+        </div>
+      </div>
+      <hr>
+      <p class="lead">
+        <a class="btn btn-primary btn-lg" href="#" role="button">Join Game</a>
+      </p>
+    </div>
+    </div>
+    <!--middle image-->
+    <img id="logo" src="assets/images/rps_logo.jpg" alt="RPS">
+    <!-- -->
+  </div>
   <!--footer-->
   <section id="footer">
     <div class="container-fluid">
@@ -39,12 +58,12 @@
         <div class="col-xs-12 col-sm-12 col-md-6 mt-2 mt-sm-5">
           <ul class="list-unstyled list-inline text-center">
             <p>Connect With Me:</p>
-            <li class="list-inline-item"><a href="javascript:void();" target="_blank"><img width="50px" src="assets/images/facebook.png" /></a></li>
-            <li class="list-inline-item"><a href="javascript:void();" target="_blank"><img width="50px" src="assets/images/twitter.png" /></a></li>
-            <li class="list-inline-item"><a href="javascript:void();" target="_blank"><img width="50px" src="assets/images/linkedin.png" /></a></li>
-            <li class="list-inline-item"><a href="javascript:void();" target="_blank"><img width="50px" src="assets/images/plus.png" /></a></li>
-            <li class="list-inline-item"><a href="javascript:void();" target="_blank"><img width="50px" src="assets/images/github.png" /></a></li>
-            <li class="list-inline-item"><a href="javascript:void();" target="_blank"><img width="50px" src="assets/images/instagram.png" /></a></li>
+            <li class="list-inline-item"><a href="javascript:void();" target="_blank"><img width="40px" src="assets/images/facebook.png" /></a></li>
+            <li class="list-inline-item"><a href="javascript:void();" target="_blank"><img width="40px" src="assets/images/twitter.png" /></a></li>
+            <li class="list-inline-item"><a href="javascript:void();" target="_blank"><img width="40px" src="assets/images/linkedin.png" /></a></li>
+            <li class="list-inline-item"><a href="javascript:void();" target="_blank"><img width="40px" src="assets/images/plus.png" /></a></li>
+            <li class="list-inline-item"><a href="javascript:void();" target="_blank"><img width="40px" src="assets/images/github.png" /></a></li>
+            <li class="list-inline-item"><a href="javascript:void();" target="_blank"><img width="40px" src="assets/images/instagram.png" /></a></li>
           </ul>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 text-md-right text-sm-center text-xs-center">
