fully mobile layout

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="container">
       <h1 class="">Rock+Paper+Scissors</h1>
       <p>
-        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">Instructions</button>
+        <button class="btn btn-lg" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">Instructions</button>
       </p>
       <div class="collapse" id="collapseExample">
         <div class="card card-body">
@@ -33,7 +33,7 @@
       </div>
       <hr>
       <p class="lead">
-        <a class="btn btn-primary btn-lg" href="#" role="button">Join Game</a>
+        <button class="btn btn-lg" role="button">Join Game</button>
       </p>
     </div>
     </div>
