--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="container">
       <h1 class="">Rock+Paper+Scissors</h1>
       <p>
-        <button class="btn btn-lg" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">Instructions</button>
+        <button class="btn btn-lg btn-jumbo" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">Instructions</button>
       </p>
       <div class="collapse" id="collapseExample">
         <div class="card card-body">
@@ -33,10 +33,42 @@
       </div>
       <hr>
       <p class="lead">
-        <button class="btn btn-lg" role="button">Join Game</button>
+        <button class="btn btn-lg btn-jumbo" role="button">Join Game</button>
       </p>
     </div>
     </div>
+  <!--Player Cards -->
+  <div class="container">
+    <div class="row">
+  <div class="col-sm-4 col-xs-4">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Player 1</h5>
+        <button class="btn player-btn">P</button>
+        <button class="btn player-btn">R</button>
+        <button class="btn player-btn">S</button>
+        <p>wins:</p>
+        <p>losses:</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-4 col-xs-4">
+
+  </div>
+  <div class="col-sm-4 col-xs-4">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Player 2</h5>
+        <button class="btn player-btn">P</button>
+        <button class="btn player-btn">R</button>
+        <button class="btn player-btn">S</button>
+        <p>wins:</p>
+        <p>losses:</p>
+      </div>
+    </div>
+  </div>
+</div>
+  </div>
     <!--middle image-->
     <img id="logo" src="assets/images/rps_logo.jpg" alt="RPS">
     <!-- -->
