player cards responsive, icons added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!--stylesheets-->
   <link rel="stylesheet" href="assets/css/reset.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/master.css">
@@ -40,28 +41,27 @@
   <!--Player Cards -->
   <div class="container">
     <div class="row">
-  <div class="col-sm-4 col-xs-4">
+  <div class="w-30">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Player 1</h5>
-        <button class="btn player-btn">P</button>
-        <button class="btn player-btn">R</button>
-        <button class="btn player-btn">S</button>
+        <button class="btn player-btn"><i class="fas fa-hand-paper"></i></button>
+        <button class="btn player-btn"><i class="fas fa-hand-rock"></i></button>
+        <button class="btn player-btn"><i class="fas fa-hand-scissors"></i></button>
         <p>wins:</p>
         <p>losses:</p>
       </div>
     </div>
   </div>
-  <div class="col-sm-4 col-xs-4">
-
+  <div class="space w-30">
   </div>
-  <div class="col-sm-4 col-xs-4">
+  <div class="w-30 ml-auto">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Player 2</h5>
-        <button class="btn player-btn">P</button>
-        <button class="btn player-btn">R</button>
-        <button class="btn player-btn">S</button>
+        <button class="btn player-btn"><i class="fas fa-hand-paper"></i></button>
+        <button class="btn player-btn"><i class="fas fa-hand-rock"></i></button>
+        <button class="btn player-btn"><i class="fas fa-hand-scissors"></i></button>
         <p>wins:</p>
         <p>losses:</p>
       </div>
