gif added for player selection

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 </div>
   </div>
     <!--middle image-->
+    <img id="loop" class="img-fluid" src="https://media.giphy.com/media/b0I9c0NXRMS1W/giphy-downsized.gif" alt="gif">
     <img id="logo" src="assets/images/rps_logo.jpg" alt="RPS">
     <!-- -->
   </div>
