center chat box

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <!--middle image-->
 
       <!--chatbox-->
-      <div class="col-sm-3 col-sm-offset-4 frame">
+      <div class="justify-center offset-md-3 col-sm-3 col-sm-offset-2 col-md-6 frame">
         <ul class=chatlist></ul>
         <div>
           <div class="msj-rta macro">
